--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "loopback-datasource-juggler": "^2.48.0",
     "node-fetch": "^1.6.3",
     "shortid": "^2.2.6",
-    "ssh2": "^0.5.4"
+    "ssh2": "^0.5.4",
+    "winston": "^2.3.0"
   },
   "babel": {
     "plugins": [
@@ -41,8 +42,7 @@
   "devDependencies": {
     "chalk": "^1.1.3",
     "moment": "^2.15.2",
-    "nodemon": "^1.11.0",
-    "winston": "^2.3.0"
+    "nodemon": "^1.11.0"
   },
   "repository": {
     "type": "git",
