--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "node-fetch": "^1.6.3",
     "shortid": "^2.2.6",
     "ssh2": "^0.5.4",
-    "winston": "^2.3.0"
+    "winston": "^2.3.0",
+    "chalk": "^1.1.3",
+    "moment": "^2.15.2"
   },
   "babel": {
     "plugins": [
@@ -40,8 +42,6 @@
     ]
   },
   "devDependencies": {
-    "chalk": "^1.1.3",
-    "moment": "^2.15.2",
     "nodemon": "^1.11.0"
   },
   "repository": {
