[new] Dynamic service setting

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -28,5 +28,9 @@
   "Job": {
     "dataSource": "mongo",
     "public": true
+  },
+  "Settings": {
+    "dataSource": "mongo",
+    "public": true
   }
 }
