--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "dev-worker": "nodemon --exec npm run worker"
   },
   "dependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-register": "^6.11.6",
-    "bluebird": "^3.4.6",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
     "fs-extra-promise": "^0.4.1",
     "http-headers": "^3.0.1",
-    "loopback": "^2.29.1",
+    "loopback": "^3.2.1",
     "loopback-boot": "^2.21.0",
-    "loopback-connector-mongodb": "^1.15.2",
-    "loopback-datasource-juggler": "^2.48.0",
-    "moment": "^2.15.2",
+    "loopback-connector-mongodb": "^3.0.0",
+    "moment": "^2.17.1",
     "node-fetch": "^1.6.3",
     "shortid": "^2.2.6",
     "ssh2": "^0.5.4",
-    "winston": "^2.3.0"
+    "strong-error-handler": "^1.2.1",
+    "winston": "^2.3.1"
   },
   "babel": {
     "plugins": [
