--- a/server/config.json
+++ b/server/config.json
@@ -4,8 +4,10 @@
   "port": 3000,
   "legacyExplorer": false,
   "remoting": {
-    "context": false,
-    "cors": false
+    "rest": {
+      "handleErrors": false
+    },
+    "context": false
   },
   "services": {
     "auth": {
